--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -29,6 +29,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'blog/bootstrap/bootstrap_grid.min.css' %}" rel="stylesheet"  media="screen">
         <link href="{% static 'blog/css/blog_post.css' %}" rel="stylesheet"  media="screen">
+        <script src="https://kit.fontawesome.com/a6164e37e3.js" crossorigin="anonymous"></script>
 
     </head>
     <body>
@@ -78,6 +79,7 @@
                         <hr/>
                         <section class="mb-5">
                             <p>{{ post.content }}</p>
+
                             <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
                             <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
                             <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
@@ -86,6 +88,22 @@
                             <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
                         </section>
                     </article>
+                    {% if post.file_upload %}
+                    <a href="{{ post.title_upload.url }}" class="btn btn-outline-dark" role="button" download>
+                        Download:
+                        {% if post.get_file_ext == 'csv' %}
+                            <i class="fa-solid fa-file-csv"></i>
+                        {% elif post.get_file_ext == 'xlsx' or  post.get_file_ext == 'xls'%}
+                            <i class="fa-solid fa-file-excel"></i>
+                        {% elif post.get_file_ext == 'docx' or  post.get_file_ext == 'doc'%}
+                            <i class="fa-solid fa-file-word"></i>
+                        {% else %}
+                            <i class="fa-solid fa-folder-arrow-down"></i>
+                        {% endif %}
+                        {{ post.get_file_name }}
+                    </a>
+                    {% endif %}
+                    <hr/>
                     <!-- Comments section-->
                     <section class="mb-5">
                         <div class="card bg-light">
