--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -112,33 +112,37 @@
 
     <div class="container my-3">
         <div class="row">
-            <div class="col-md-8 col-lg-9">
+            <div class="col-md-8 col-lg-9", id="main-area">
                 <h1>Blog</h1>
-                {% for p in post_list %}
-                <div class="card mb-4">
-<!--                    조건문 사용으로 이미지가 없으면 alt= "{{ p }} head image"로 대체-->
-                    {% if p.head_image %}
-                    <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
-                    {% else %}
-                    <!-- 이미지가 없다면 https://picsum.photos/가로사이즈/세로사이즈" 랜덤이미지 출력 seed/pk를 넣어 새로고침에도 이미지 고정 -->
-                    <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                    {% endif %}
-                    <div class="card-body">
-                        <h2 class="card-title">{{ p.title }}</h2>
-                        {% if p.hook_text %}
-                            <h5 class="text_muted">{{ p.hook_text }}</h5>
+                {% if post_list.exists %}
+                    {% for p in post_list %}
+                    <div class="card mb-4">
+    <!--                    조건문 사용으로 이미지가 없으면 alt= "{{ p }} head image"로 대체-->
+                        {% if p.head_image %}
+                        <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
+                        {% else %}
+                        <!-- 이미지가 없다면 https://picsum.photos/가로사이즈/세로사이즈" 랜덤이미지 출력 seed/pk를 넣어 새로고침에도 이미지 고정 -->
+                        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                         {% endif %}
-<!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
-                        <p class="card-text">{{ p.content|truncatewords:45 }}</p>
-                        <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more &rarr;</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                        Posted on {{ p.created_at }} by
-                        <a href="#">작성자명 쓸 위치(개발예정)</a>
-                    </div>
+                        <div class="card-body">
+                            <h2 class="card-title">{{ p.title }}</h2>
+                            {% if p.hook_text %}
+                                <h5 class="text_muted">{{ p.hook_text }}</h5>
+                            {% endif %}
+    <!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
+                            <p class="card-text">{{ p.content|truncatewords:45 }}</p>
+                            <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more &rarr;</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            Posted on {{ p.created_at }} by
+                            <a href="#">작성자명 쓸 위치(개발예정)</a>
+                        </div>
 
-                </div>
-                {% endfor %}
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <h3>아직 게시물이 없습니다.</h3>
+                {% endif %}
             </div>
             <div class="col-md-4 col-lg-3">
                 <h3>Search</h3>
