--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,214 +1,48 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="ko">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Blog</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--  <h1>Blog</h1>-->
+{% extends 'blog/base.html' %}
 
-<!--{% for p in post_list %}-->
-<!--  <hr/>-->
-<!--  <h2><a href="{{ p.get_absolute_url }}"> {{ p.title }}</a></h2>-->
-<!--  <h4>{{ p.created_at }}</h4>-->
-<!--  <p>{{ p.content }}</p>-->
-<!--{% endfor %}-->
-<!--</body>-->
-<!--</html>-->
+{% block main_area %}
 
-<!DOCTYPE html>
-<html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-    <link href="./bootstrap4:css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
-
-</head>
-
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Do It django</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./blog_list.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./about_me.html">About Me</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">공지사항</a>
-                    </li>
-                </ul>
-                <!-- <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Log In</a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-
-    <!-- Modal -->
-    <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="logInModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="loginModalLabel"><i class="fa-thin fa-arrow-right-to-bracket"></i>&nbsp Log In</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-brands fa-google"></i>&nbsp&nbsp Log in with Google</button>
-                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-thin fa-envelope"></i>&nbsp&nbsp Log in with E-mail</button>
-                        </div>
-                        <div class="col-md-6">
-                            <button type="button" class="btn btn-outline-dark btn-block btn-sm"><i class="fa-thin fa-envelope"></i>&nbsp&nbsp Sign Up with E-mail</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="container my-3">
-        <div class="row">
-            <div class="col-md-8 col-lg-9", id="main-area">
-                <h1>Blog</h1>
-                {% if post_list.exists %}
-                    {% for p in post_list %}
-                    <div class="card mb-4">
+    <h1>Blog</h1>
+    {% if post_list.exists %}
+        {% for p in post_list %}
+        <div class="card mb-4">
     <!--                    조건문 사용으로 이미지가 없으면 alt= "{{ p }} head image"로 대체-->
-                        {% if p.head_image %}
-                        <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
-                        {% else %}
-                        <!-- 이미지가 없다면 https://picsum.photos/가로사이즈/세로사이즈" 랜덤이미지 출력 seed/pk를 넣어 새로고침에도 이미지 고정 -->
-                        <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
-                        {% endif %}
-                        <div class="card-body">
-                            <h2 class="card-title">{{ p.title }}</h2>
-                            {% if p.hook_text %}
-                                <h5 class="text_muted">{{ p.hook_text }}</h5>
-                            {% endif %}
-    <!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
-                            <p class="card-text">{{ p.content|truncatewords:45 }}</p>
-                            <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more &rarr;</a>
-                        </div>
-                        <div class="card-footer text-muted">
-                            Posted on {{ p.created_at }} by
-                            <a href="#">작성자명 쓸 위치(개발예정)</a>
-                        </div>
-
-                    </div>
-                    {% endfor %}
-                {% else %}
-                    <h3>아직 게시물이 없습니다.</h3>
+            {% if p.head_image %}
+            <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
+            {% else %}
+            <!-- 이미지가 없다면 https://picsum.photos/가로사이즈/세로사이즈" 랜덤이미지 출력 seed/pk를 넣어 새로고침에도 이미지 고정 -->
+            <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
+            {% endif %}
+            <div class="card-body">
+                <h2 class="card-title">{{ p.title }}</h2>
+                {% if p.hook_text %}
+                    <h5 class="text_muted">{{ p.hook_text }}</h5>
                 {% endif %}
+    <!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
+                <p class="card-text">{{ p.content|truncatewords:45 }}</p>
+                <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more &rarr;</a>
             </div>
-            <div class="col-md-4 col-lg-3">
-                <h3>Search</h3>
-                <div class="card mb-4">
-                    <div class="card-header">Search</div>
-                    <div class="card-body">
-                        <div class="input-group">
-                            <input class="form-control" type="text" placeholder="Enter search term..."
-                                aria-label="Enter search term..." aria-describedby="button-search">
-                            <button class="btn btn-primary" id="button-search" type="button">Go!</button>
-                        </div>
-                    </div>
-                </div>
-
-                <h3>Categories</h3>
-                <div class="card mb-4">
-                    <div class="card-header">Categories</div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#!">Web Design</a></li>
-                                    <li><a href="#!">HTML</a></li>
-                                    <li><a href="#!">Freebies</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-6">
-                                <ul class="list-unstyled mb-0">
-                                    <li><a href="#!">JavaScript</a></li>
-                                    <li><a href="#!">CSS</a></li>
-                                    <li><a href="#!">Tutorials</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+            <div class="card-footer text-muted">
+                Posted on {{ p.created_at }} by
+                <a href="#">작성자명 쓸 위치(개발예정)</a>
             </div>
+
         </div>
-        <nav aria-label="Pagination">
-            <hr class="my-0">
-            <ul class="pagination justify-content-center my-4">
-                <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
-                        aria-disabled="true">Newer</a></li>
-                <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
-                <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
-                <li class="page-item"><a class="page-link" href="#!">15</a></li>
-                <li class="page-item"><a class="page-link" href="#!">Older</a></li>
-            </ul>
-        </nav>
-        <footer class="py-5 bg-dark">
-            <div class="container">
-                <p class="m-0 text-center text-white">Copyright © Your Website 2022</p>
-            </div>
-        </footer>
+        {% endfor %}
+    {% else %}
+        <h3>아직 게시물이 없습니다.</h3>
+    {% endif %}
 
-    </div>
-
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+<nav aria-label="Pagination">
+    <hr class="my-0">
+    <ul class="pagination justify-content-center my-4">
+        <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1"
+                aria-disabled="true">&larr; Newer</a></li>
+        <li class="page-item active" aria-current="page"><a class="page-link" href="#!">1</a></li>
+        <li class="page-item"><a class="page-link" href="#!">2</a></li>
+        <li class="page-item disabled"><a class="page-link" href="#!">...</a></li>
+        <li class="page-item"><a class="page-link" href="#!">15</a></li>
+        <li class="page-item"><a class="page-link" href="#!">Older &rarr;</a></li>
+    </ul>
+</nav>
+{% endblock %}
