--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="/blog/">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/bout_me/">About Me</a>
+                    <a class="nav-link" href="/about_me/">About Me</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
