--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <h1>Blog</h1>
     {% if post_list.exists %}
         {% for p in post_list %}
-        <div class="card mb-4">
+        <div class="card mb-4" id="post-{{ p.pk }}">
     <!--                    조건문 사용으로 이미지가 없으면 alt= "{{ p }} head image"로 대체-->
             {% if p.head_image %}
             <img class="card-img-top" src="{{ p.head_image.url }}" alt= "{{ p }} head image">
@@ -14,6 +14,11 @@
             <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
             {% endif %}
             <div class="card-body">
+                {% if p.category %}
+                    <span class="badge badge-secondary float-right" >{{ p.category }}</span>
+                {% else %}
+                    <span class="badge badge-secondary float-right" >미분류</span>
+                {% endif %}
                 <h2 class="card-title">{{ p.title }}</h2>
                 {% if p.hook_text %}
                     <h5 class="text_muted">{{ p.hook_text }}</h5>
