--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -25,6 +25,17 @@
                 {% endif %}
     <!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
                 <p class="card-text">{{ p.content|truncatewords:45 }}</p>
+                {% if p.tags.exists %}
+                    <i class="fa-solid fa-tags"></i>
+                    {% for tag in p.tags.iterator %}
+                        <a href="{{ tag.get_absolute_url }}">
+                            <span class="badge rounded-pill bg-light text-dark">{{ tag }}</span>
+                        </a>
+                    {% endfor %}
+                    <br/>
+                    <br/>
+                {% endif %}
+
                 <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more &rarr;</a>
             </div>
             <div class="card-footer text-muted">
