--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,6 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link href="./bootstrap4:css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
+    <script src="https://kit.fontawesome.com/a6164e37e3.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -89,6 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
