--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -1,9 +1,9 @@
 {% extends 'blog/base_full_width.html' %}
 
-{% block head_title %}Create Post - Blog{% endblock %}
+{% block head_title %}Edit Post - Blog{% endblock %}
 
 {% block main_area %}
-    <h1>Creae New Post</h1>
+    <h1>Edit Post</h1>
     <hr/>
 <!-- <form> 태그는 사용자가 기록한 값을 서버로 보내기 위한 용도, form 태그 안 필수 -> {% csrf_token %} :: csrf공격으로부터 보호하기 위한 장고가 제공하는 기능 -->
     <form method="post" enctype="multipart/form-data">{% csrf_token %}
