--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,6 +17,7 @@
 <!--</html>-->
 
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
 
 <head>
@@ -24,7 +25,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link href="./bootstrap4:css/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
+<!--    <link href="./bootstrap4:css/bootstrap.min.css" rel="stylesheet" type="text/css">-->
+    <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}" media="screen">
     <script src="https://kit.fontawesome.com/a6164e37e3.js" crossorigin="anonymous"></script>
 
 </head>
