--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -102,7 +102,7 @@
             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
             <div class="media-body">
                 {% if user.is_authenticated and comment.author == user %}
-                    <div class="float-right">
+                    <div class="btn float-right">
                         <a role="button"
                            class="btn btn-sm btn-info"
                            id="comment-{{ comment.pk }}-update-btn"
