--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -47,8 +47,8 @@
                     <div class="card-body">
                         <div class="input-group">
                             <input class="form-control" type="text" placeholder="Enter search term..."
-                                aria-label="Enter search term..." aria-describedby="button-search">
-                            <button class="btn btn-primary" id="button-search" type="button">Go!</button>
+                                aria-label="Enter search term..." aria-describedby="button-search" id="search-input">
+                                <button class="btn btn-primary" id="button-search" type="button" onclick="searchPost();">Go!</button>
                         </div>
                     </div>
                 </div>
@@ -84,15 +84,35 @@
 
         </div>
         <!-- footer 모듈화 -->
-        {% include 'blog/footer.html' %}
+
     </div>
+
+
+    <script>
+    function searchPost(){
+        let searchValue = document.getElementById('search-input').value.trim();
+        if (searchValue.length > 1){
+            location.href="/blog/search/" + searchValue + "/";
+        }
+        else{
+            alert('검색어('+ searchValue +')가 너무 짧습니다.');
+        }
+    };
+
+    document.getElementById('search-input').addEventListener('keyup', function(event){
+        if(event.key === 'Enter'){
+            searchPost();
+        }
+    });
+    </script>
+
+    {% include 'blog/footer.html' %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
