--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,9 @@
         {% endif %}
     {% endif %}
 
+
     <h1>Blog
+        {% if search_info %}<small class="text-muted">{{ search_info }}</small>{% endif %}
         {% if category %}
             <span class="badge bg-secondary">{{ category }}</span>
         {% endif %}
