--- a/blog/templates/blog/footer.html
+++ b/blog/templates/blog/footer.html
@@ -1,5 +1,5 @@
 <footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright © Your Website 2022</p>
+        <p class="m-0 text-center text-white"> Make Website 2022 by SON</p>
     </div>
 </footer>
