--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/">Do It Django</a>
+        <a class="navbar-brand" href="/">Django</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link disabled">공지사항</a>
+                    <a class="nav-link" href="/notice/">공지사항</a>
                 </li>
             </ul>
             <!-- <form class="d-flex">
