--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -22,7 +22,9 @@
         <hr/>
         <p>{{ post.created_at }}</p>
         {% if user.is_authenticated and user == post.author %}
-            <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}/" role="button"><i class="fa-solid fa-square-pen"></i>  Edit Post</a>
+            <div align="right">
+                <a class="btn btn-info btn-sm float-right" href="/blog/update_post/{{ post.pk }}/" role="button"><i class="fa-solid fa-square-pen"></i>  Edit Post</a>
+            </div>
         {% endif %}
         <!-- Post categories-->
         <div>
@@ -34,18 +36,11 @@
         <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" /></figure>
         <!-- Post content-->
         {% else %}
-        <img class="imag-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/950/200" alt="random_image">
+        <img class="imag-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/965/200" alt="random_image">
         {% endif %}
         <hr/>
         <section class="mb-5">
             <p>{{ post.content }}</p>
-
-            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
             {% if post.tags.exists %}
                     <i class="fa-solid fa-tags"></i>
                     {% for tag in post.tags.all %}
@@ -86,7 +81,9 @@
 <!--                        <textarea class="form-control" rows="3"></textarea>-->
                         {{ comment_form | crispy }}
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <div align="right">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </form>
             {% else %}
                 <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-toggle="modal" data-target="#loginModal">Log in and leave a Comment</a>
