--- a/single_pages/templates/single_pages/about_me.html
+++ b/single_pages/templates/single_pages/about_me.html
@@ -13,88 +13,92 @@
 <body>
 {% include 'blog/navbar.html' %}
 
-<section class="bg-light">
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-lg-8">
-                <h1>안녕하세요 손철성입니다.</h1>
-                <br/>
-                <p class="lead">
-                    <h6>운동을 매우 좋아합니다. <br/>
-                    헬스를 매주 4회 이상 가며 풋살, 달리기를 주 1회 정도 하고 수영도 가끔 하고 있습니다.</h6>
-                </p>
-                <ul>
-                    <li>경력</li>
+    <section class="bg-light">
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-lg-8">
+                    <h1>안녕하세요 반갑습니다.</h1>
+                    <br/>
+                    <p class="lead">
+                        <h4>
+                        개발자가 되기 위해 모르는 것을 줄이기 위해 노력하고 있고<br/> 준비하고 있는 손철성이라고 합니다.</h4>
+                    </p>
                     <ul>
-                        <li>한국경영데이터분석연구원(주) - 데이터 분석 (2021.06 ~ 2021.11)</li>
-                        <li></li>
+                        <li>경력</li>
+                        <ul>
+                            <li>한국경영데이터분석연구원(주) - 데이터 분석 (2021.06 ~ 2021.11) 인턴</li>
+                        </ul>
+                        <li>학력</li>
+                        <ul>
+                            <li>아주대학교 기계공학과 졸업(2015.03 ~ 2021.02)</li>
+                            <li>아산고등학교 졸업(2012.03 ~ 2015.02)</li>
+                        </ul>
+                        <li>사용 기술</li>
+                        <ul>
+                            <li>파이썬</li>
+                            <li>tensorflow</li>
+                            <li>R</li>
+                            <li>Mysql</li>
+                            <li>Django</li>
+                        </ul>
                     </ul>
-                    <li>학력</li>
-                    <ul>
-                        <li>아주대학교 기계공학과 졸업(2015.03 ~ 2021.02)</li>
-                        <li>아산고등학교 졸업(2012.03 ~ 2015.02)</li>
-                    </ul>
-                    <li>사용 기술</li>
-                    <ul>
-                        <li>파이썬</li>
-                        <li>tensorflow</li>
-                        <li>R</li>
-                        <li>Mysql</li>
-                        <li>Django</li>
-                    </ul>
-                </ul>
-
-
-            </div>
-            <div class="col-lg-4">
-                <img class="img-fluid" src="{% static 'single_pages/images/my_back.jpg' %}">
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="bg-light margin-for-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>PORTFOLIO</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#pycon2017">
-                    <img class="card-img-top" src="{% static 'single_pages/images/pycon_sy_2017.jpg' %}">
-                    <div class="card-body">
-                        <h5 class="card-title">Tensorflow</h5>
-                        <p>Python, Django, Pandas, python-docx로 통계업무 자동화한 내용을 파이콘에서 발표했습니다.</p>
-                    </div>
                 </div>
-            </div>
+                <div class="col-lg-4">
+                    <img class="img-fluid" src="{% static 'single_pages/images/my_back.jpg' %}">
+                    <div class="row">
 
-            <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#inflearn_django2">
-                    <img class="card-img-top" src="{% static 'single_pages/images/inflearn_django2.jpg' %}">
-                    <div class="card-body">
-                        <h5 class="card-title">Django + Bootstrap</h5>
-                        <p>파이썬 웹개발에 대한 인프런 동영상 강의입니다.</p>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4">
-                <div class="card" data-toggle="modal" data-target="#automation_python">
-                    <img class="card-img-top" src="{% static 'single_pages/images/automation_python.jpg' %}">
-                    <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p>파이썬</p>
+                    <div class="mt-2" align="center">
+                        <a class="btn btn-outline-info btn-sm float-right" href="https://github.com/cheolseong-son/" role="button">
+                        <i class="fa-solid fa-pencil"></i>&nbsp;&nbsp;github</a>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
 
-    </div>
-</section>
+
+    <section class="bg-light margin-for-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2>취미</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card" data-toggle="modal" data-target="#pycon2017">
+                        <img class="card-img-top" src="{% static 'single_pages/images/health.png' %}" height="395px">
+                        <div class="card-body">
+                            <h5 class="card-title">헬스</h5>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="card" data-toggle="modal" data-target="#inflearn_django2">
+                        <img class="card-img-top" src="{% static 'single_pages/images/soccer.png' %}" height="395px">
+                        <div class="card-body">
+                            <h5 class="card-title">풋살</h5>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                    <div class="card" data-toggle="modal" data-target="#automation_python">
+                        <img class="card-img-top" src="{% static 'single_pages/images/running.png' %}" height="395px">
+                        <div class="card-body">
+                            <h5 class="card-title ">런닝</h5>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 <!--&lt;!&ndash; Modal &ndash;&gt;-->
 <!--<div class="modal fade" id="pycon2017" tabindex="-1" role="dialog" aria-labelledby="pycon2017ModalLabel" aria-hidden="true">-->
@@ -179,8 +183,7 @@
 <!--</div>-->
 
 
-
-<div class="fixed-bottom">
+<div>
     {% include 'blog/footer.html' %}
 </div>
 
