--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -41,7 +41,9 @@
 
         </div>
         <!-- footer 모듈화 -->
-        {% include 'blog/footer.html' %}
+        <div class="fixed-bottom">
+            {% include 'blog/footer.html' %}
+        </div>
     </div>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
