--- a/notice/templates/notice/notice_form.html
+++ b/notice/templates/notice/notice_form.html
@@ -2,19 +2,16 @@
 
 {% load crispy_forms_tags %}
 
-{% block head_title %}Create Post - Blog{% endblock %}
+{% block head_title %}Create Notice - Blog{% endblock %}
 
 {% block main_area %}
-    <h1>Create New Post</h1>
+    <h1>Create New Notice</h1>
     <hr/>
 <!-- <form> 태그는 사용자가 기록한 값을 서버로 보내기 위한 용도, form 태그 안 필수 -> {% csrf_token %} :: csrf공격으로부터 보호하기 위한 장고가 제공하는 기능 -->
     <form method="post" enctype="multipart/form-data">{% csrf_token %}
         {{ form | crispy }}
-        <div id="div_id_tags_str">
-            <label for="id_tags_str">Tags:</label>
-            <input type="text" name="tags_str" id="id_tags_str" class="textinput textInput form-control">
+        <div align="right" class="mt-3">
+             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-        <br/>
-        <button type="submit" class="btn btn-primary float-right">Submit</button>
     </form>
 {% endblock %}
