내용에 markdown 적용

--- a/blog/templates/blog/base_full_width.html
+++ b/blog/templates/blog/base_full_width.html
@@ -41,7 +41,7 @@
 
         </div>
         <!-- footer 모듈화 -->
-        <div class="fixed-bottom">
+        <div class="">
             {% include 'blog/footer.html' %}
         </div>
     </div>
