--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -11,9 +11,11 @@
         <div id="div_id_tags_str">
             <label for="id_tags_str">Tags:</label>
             <input type="text" name="tags_str" id="id_tags_str" class="textinput textInput form-control"
-                   value="{{ tags_str_default }}">
+                value="{{ tags_str_default }}">
         </div>
         <br/>
-        <button type="submit" class="btn btn-primary float-right">Submit</button>
+        <div align="right" class="mb-3">
+            <button type="submit" class="btn btn-primary float-right">Submit</button>
+        </div>
     </form>
 {% endblock %}
