--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-        <a class="navbar-brand" href="/">Django</a>
+        <a class="navbar-brand" href="/"><i class="fa-solid fa-house-chimney"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -25,8 +25,8 @@
                 </li>
             </ul>
             <!-- <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
             <ul class="navbar-nav ml-auto">
                 {% if user.is_authenticated %}
