--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -42,7 +42,7 @@
                     <h5 class="text_muted">{{ p.hook_text }}</h5>
                 {% endif %}
     <!--                        truncatewords: 문자열의 단어수 자르기, truncatechars: 글자수 자르기 -->
-                <p class="card-text">{{ p.content|truncatewords:45 }}</p>
+                <p class="card-text">{{ p.get_content_markdown |truncatewords_html:45 | safe }}</p>
                 {% if p.tags.exists %}
                     <i class="fa-solid fa-tags"></i>
                     {% for tag in p.tags.iterator %}
