--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>Do it Sonny</title>
@@ -10,48 +11,50 @@
     <script src="https://kit.fontawesome.com/a6164e37e3.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-{% include 'blog/navbar.html' %}
-<section>
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-lg-6 text-dark">
-                <h1 class="mt-5">Django</h1>
-                <h5>파이썬 가장 대표적인 웹 프레임워크 중 하나인 Django를 이용하여</h5>
-                <h5>나만의 블로그 만들기</h5>
-            </div>
-            <div class="col-lg-5 mt-5" >
-                <h2 class="text-dark">Blog - Recent Posts</h2>
-                {% for post in recent_posts %}
+    {% include 'blog/navbar.html' %}
+    <section>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-lg-6 text-dark">
+                    <h1 class="mt-5">Django</h1>
+                    <h5>파이썬 가장 대표적인 웹 프레임워크 중 하나인 Django를 이용하여</h5>
+                    <h5>나만의 블로그 만들기</h5>
+                </div>
+                <div class="col-lg-5 mt-5">
+                    <h2 class="text-dark">Blog - Recent Posts</h2>
+                    {% for post in recent_posts %}
                     <div class="card mt-1">
                         <div class="card-body">
-                            <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">{{ post.title }}</a></h6>
+                            <h6><a href="{{ post.get_absolute_url }}" class="text-decoration-none text-dark">
+                                {{ post.title }}</a></h6>
                             <span class="badge badge-pill badge-light">
-                                <img class="mr-1 rounded-circle" width="15px" src="{{ post.get_avatar_url }}" alt="{{ post.author }}">
+                                <img class="mr-1 rounded-circle" width="15px" src="{{ post.get_avatar_url }}"
+                                    alt="{{ post.author }}">
                                 &nbsp;&nbsp;{{ post.created_at }}
-                           </span>
+                            </span>
                         </div>
                     </div>
-                {% endfor %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
-    <div class="fixed-bottom">
-        {% include 'blog/footer.html' %}
-    </div>
+<div class="fixed-bottom">
+    {% include 'blog/footer.html' %}
+</div>
 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
-
-
